--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,7 +24,7 @@
         <activity
             android:name="com.yaho.facelapse.ScreenActivity">
         </activity>
-
+        <activity android:name=".SelfieActivity"/>
     </application>
 
 </manifest>
