--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         </activity>
 
         <activity
-            android:name="com.yaho.facelapse.ScreenActivity">
+            android:name=".ScreenActivity">
+        </activity>
+
+        <activity
+            android:name=".SelfieActivity">
         </activity>
 
         <activity
