--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.0.4'
     compile 'com.google.firebase:firebase-messaging:11.0.4'
     compile 'com.firebase:firebase-jobdispatcher:0.8.5'
+    compile 'org.jcodec:jcodec:0.2.2'
+    compile 'org.jcodec:jcodec-javase:0.2.2'
+    compile 'org.jcodec:jcodec-android:0.2.2'
     testCompile 'junit:junit:4.12'
 }
 
