--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/iconsample"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
 
         <!-- Splash Activity 로딩화면 액티비티 -->
         <activity
@@ -37,6 +38,10 @@
 
         <activity
             android:name=".SelfieActivity">
+        </activity>
+
+        <activity
+            android:name=".GenvidActivity">
         </activity>
 
         <activity
